src/bindings_linux_armv8.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _OVERLAPPED"][::std::mem::size_of::<_OVERLAPPED>() - 24usize];
    ["Alignment of _OVERLAPPED"][::std::mem::align_of::<_OVERLAPPED>() - 8usize];
    ["Offset of field: _OVERLAPPED::Internal"]
        [::std::mem::offset_of!(_OVERLAPPED, Internal) - 0usize];
    ["Offset of field: _OVERLAPPED::InternalHigh"]
        [::std::mem::offset_of!(_OVERLAPPED, InternalHigh) - 4usize];
    ["Offset of field: _OVERLAPPED::hEvent"][::std::mem::offset_of!(_OVERLAPPED, hEvent) - 16usize];
};
impl Default for _OVERLAPPED {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type LPOVERLAPPED = *mut _OVERLAPPED;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _SECURITY_ATTRIBUTES {
    pub nLength: DWORD,
    pub lpSecurityDescriptor: LPVOID,
    pub bInheritHandle: BOOL,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _SECURITY_ATTRIBUTES"][::std::mem::size_of::<_SECURITY_ATTRIBUTES>() - 24usize];
    ["Alignment of _SECURITY_ATTRIBUTES"][::std::mem::align_of::<_SECURITY_ATTRIBUTES>() - 8usize];
    ["Offset of field: _SECURITY_ATTRIBUTES::nLength"]
        [::std::mem::offset_of!(_SECURITY_ATTRIBUTES, nLength) - 0usize];
    ["Offset of field: _SECURITY_ATTRIBUTES::lpSecurityDescriptor"]
        [::std::mem::offset_of!(_SECURITY_ATTRIBUTES, lpSecurityDescriptor) - 8usize];
    ["Offset of field: _SECURITY_ATTRIBUTES::bInheritHandle"]
        [::std::mem::offset_of!(_SECURITY_ATTRIBUTES, bInheritHandle) - 16usize];
};
impl Default for _SECURITY_ATTRIBUTES {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type LPSECURITY_ATTRIBUTES = *mut _SECURITY_ATTRIBUTES;
#[doc = " @name FT_HANDLE\n An opaque value used as a handle to an opened FT device."]
pub type FT_HANDLE = PVOID;
#[doc = " @{\n @name FT_STATUS\n @details Return status values for API calls."]
pub type FT_STATUS = ULONG;
pub const FT_OK: _bindgen_ty_11 = 0;
pub const FT_INVALID_HANDLE: _bindgen_ty_11 = 1;
pub const FT_DEVICE_NOT_FOUND: _bindgen_ty_11 = 2;
pub const FT_DEVICE_NOT_OPENED: _bindgen_ty_11 = 3;
pub const FT_IO_ERROR: _bindgen_ty_11 = 4;
pub const FT_INSUFFICIENT_RESOURCES: _bindgen_ty_11 = 5;
pub const FT_INVALID_PARAMETER: _bindgen_ty_11 = 6;
pub const FT_INVALID_BAUD_RATE: _bindgen_ty_11 = 7;
pub const FT_DEVICE_NOT_OPENED_FOR_ERASE: _bindgen_ty_11 = 8;
pub const FT_DEVICE_NOT_OPENED_FOR_WRITE: _bindgen_ty_11 = 9;
pub const FT_FAILED_TO_WRITE_DEVICE: _bindgen_ty_11 = 10;
pub const FT_EEPROM_READ_FAILED: _bindgen_ty_11 = 11;
pub const FT_EEPROM_WRITE_FAILED: _bindgen_ty_11 = 12;
pub const FT_EEPROM_ERASE_FAILED: _bindgen_ty_11 = 13;
pub const FT_EEPROM_NOT_PRESENT: _bindgen_ty_11 = 14;
pub const FT_EEPROM_NOT_PROGRAMMED: _bindgen_ty_11 = 15;
pub const FT_INVALID_ARGS: _bindgen_ty_11 = 16;
pub const FT_NOT_SUPPORTED: _bindgen_ty_11 = 17;
pub const FT_OTHER_ERROR: _bindgen_ty_11 = 18;
pub const FT_DEVICE_LIST_NOT_READY: _bindgen_ty_11 = 19;
pub type _bindgen_ty_11 = ::std::os::raw::c_uint;
#[doc = " @{\n @name Device Types\n @details Known supported FTDI device types supported by this library."]
pub type FT_DEVICE = ULONG;
pub const FT_DEVICE_BM: _bindgen_ty_12 = 0;
pub const FT_DEVICE_AM: _bindgen_ty_12 = 1;
pub const FT_DEVICE_100AX: _bindgen_ty_12 = 2;
pub const FT_DEVICE_UNKNOWN: _bindgen_ty_12 = 3;
pub const FT_DEVICE_2232C: _bindgen_ty_12 = 4;
pub const FT_DEVICE_232R: _bindgen_ty_12 = 5;
pub const FT_DEVICE_2232H: _bindgen_ty_12 = 6;
pub const FT_DEVICE_4232H: _bindgen_ty_12 = 7;
pub const FT_DEVICE_232H: _bindgen_ty_12 = 8;
pub const FT_DEVICE_X_SERIES: _bindgen_ty_12 = 9;
pub const FT_DEVICE_4222H_0: _bindgen_ty_12 = 10;
pub const FT_DEVICE_4222H_1_2: _bindgen_ty_12 = 11;
pub const FT_DEVICE_4222H_3: _bindgen_ty_12 = 12;
pub const FT_DEVICE_4222_PROG: _bindgen_ty_12 = 13;
pub const FT_DEVICE_900: _bindgen_ty_12 = 14;
pub const FT_DEVICE_930: _bindgen_ty_12 = 15;
pub const FT_DEVICE_UMFTPD3A: _bindgen_ty_12 = 16;
pub const FT_DEVICE_2233HP: _bindgen_ty_12 = 17;
pub const FT_DEVICE_4233HP: _bindgen_ty_12 = 18;
pub const FT_DEVICE_2232HP: _bindgen_ty_12 = 19;
pub const FT_DEVICE_4232HP: _bindgen_ty_12 = 20;
pub const FT_DEVICE_233HP: _bindgen_ty_12 = 21;
pub const FT_DEVICE_232HP: _bindgen_ty_12 = 22;
pub const FT_DEVICE_2232HA: _bindgen_ty_12 = 23;
pub const FT_DEVICE_4232HA: _bindgen_ty_12 = 24;
pub type _bindgen_ty_12 = ::std::os::raw::c_uint;
pub const FT_FLAGS_OPENED: _bindgen_ty_13 = 1;
pub const FT_FLAGS_HISPEED: _bindgen_ty_13 = 2;
#[doc = " @{\n @name FT_DEVICE_LIST_INFO_NODE Device Information Flags\n @par Summary\n These flags are used in the Flags member of FT_DEVICE_LIST_INFO_NODE to indicated the state of\n the device and speed of the device."]
pub type _bindgen_ty_13 = ::std::os::raw::c_uint;
unsafe extern "C" {
    #[doc = " @noop FT_SetVIDPID\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n @par Summary\n A command to include a custom VID and PID combination within the internal device list table.\n This will allow the driver to load for the specified VID and PID combination.\n @param dwVID Device Vendor ID (VID)\n @param dwPID Device Product ID (PID)\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n By default, the driver will support a limited set of VID and PID matched devices (VID 0x0403\n with PIDs for standard FTDI devices only).\n @n In order to use the driver with other VID and PID combinations the FT_SetVIDPID function\n must be used prior to calling FT_ListDevices, FT_Open, FT_OpenEx or FT_CreateDeviceInfoList.\n @note Extra function for non-Windows platforms to compensate for lack of .INF file to specify\n Vendor and Product IDs."]
    pub fn FT_SetVIDPID(dwVID: DWORD, dwPID: DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetVIDPID\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n @par Summary\n A command to retrieve the current VID and PID combination from within the internal device list table.\n @param pdwVID Pointer to DWORD that will contain the internal VID\n @param pdwPID Pointer to DWORD that will contain the internal PID\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n @note Extra function for non-Windows platforms to compensate for lack of .INF file to specify Vendor and Product IDs.\n @see FT_SetVIDPID."]
    pub fn FT_GetVIDPID(pdwVID: *mut DWORD, pdwPID: *mut DWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_CreateDeviceInfoList\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function builds a device information list and returns the number of D2XX devices connected to the\n system. The list contains information about both unopen and open devices.\n @param lpdwNumDevs Pointer to unsigned long to store the number of devices connected.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n An application can use this function to get the number of devices attached to the system. It can then\n allocate space for the device information list and retrieve the list using FT_GetDeviceInfoList or\n FT_GetDeviceInfoDetail.\n @n If the devices connected to the system change, the device info list will not be updated until\n FT_CreateDeviceInfoList is called again.\n @see FT_GetDeviceInfoList\n @see FT_GetDeviceInfoDetail"]
    pub fn FT_CreateDeviceInfoList(lpdwNumDevs: LPDWORD) -> FT_STATUS;
}
#[doc = "  @noop FT_DEVICE_LIST_INFO_NODE\n @par Summary\n This structure is used for passing information about a device back from the FT_GetDeviceInfoList function.\n @see FT_GetDeviceInfoList"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ft_device_list_info_node {
    pub Flags: ULONG,
    pub Type: ULONG,
    pub ID: ULONG,
    pub LocId: DWORD,
    pub SerialNumber: [::std::os::raw::c_char; 16usize],
    pub Description: [::std::os::raw::c_char; 64usize],
    pub ftHandle: FT_HANDLE,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _ft_device_list_info_node"]
        [::std::mem::size_of::<_ft_device_list_info_node>() - 104usize];
    ["Alignment of _ft_device_list_info_node"]
        [::std::mem::align_of::<_ft_device_list_info_node>() - 8usize];
    ["Offset of field: _ft_device_list_info_node::Flags"]
        [::std::mem::offset_of!(_ft_device_list_info_node, Flags) - 0usize];
    ["Offset of field: _ft_device_list_info_node::Type"]
        [::std::mem::offset_of!(_ft_device_list_info_node, Type) - 4usize];
    ["Offset of field: _ft_device_list_info_node::ID"]
        [::std::mem::offset_of!(_ft_device_list_info_node, ID) - 8usize];
    ["Offset of field: _ft_device_list_info_node::LocId"]
        [::std::mem::offset_of!(_ft_device_list_info_node, LocId) - 12usize];
    ["Offset of field: _ft_device_list_info_node::SerialNumber"]
        [::std::mem::offset_of!(_ft_device_list_info_node, SerialNumber) - 16usize];
    ["Offset of field: _ft_device_list_info_node::Description"]
        [::std::mem::offset_of!(_ft_device_list_info_node, Description) - 32usize];
    ["Offset of field: _ft_device_list_info_node::ftHandle"]
        [::std::mem::offset_of!(_ft_device_list_info_node, ftHandle) - 96usize];
};
impl Default for _ft_device_list_info_node {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
